--- a/cinesend-pricing.html
+++ b/cinesend-pricing.html
@@ -244,6 +244,53 @@
         </div>
       </div>
     </div>
+    <!-- FILES SECTION -->
+<section class="section">
+  <div class="section-inner">
+    <div class="section-header">
+      <h2>CineSend Files</h2>
+      <p>
+        Secure file delivery, storage, and review workflows built for film,
+        TV, and professional media teams.
+      </p>
+    </div>
+
+    <div class="pricing-grid">
+      <!-- FILES TRIAL -->
+      <div class="card">
+        <div class="plan-name">Free Trial</div>
+        <div class="price">$0</div>
+        <div class="plan-desc">
+          Try CineSend Files with limited storage and core security features.
+        </div>
+
+        <a href="#" class="btn-primary">Start free trial</a>
+      </div>
+
+      <!-- FILES STARTER -->
+      <div class="card recommended">
+        <div class="badge">Most popular</div>
+        <div class="plan-name">Starter Pack</div>
+        <div class="price">$497 <span>/ month</span></div>
+        <div class="plan-desc">
+          Unlimited secure screeners, file delivery, and review tools for
+          growing teams.
+        </div>
+
+        <a href="#" class="btn-primary">Get started</a>
+      </div>
+
+      <!-- FILES ENTERPRISE -->
+      <div class="card">
+        <div class="plan-name">Enterprise</div>
+        <div class="price">Custom</div>
+        <div class="plan-desc">
+          Advanced permissions, SSO, large-scale libraries, and dedicated
+          support.
+        </div>
+
+        <a href="#" class="btn-outline">Contact sales</a>
+      </div>
   </section>
 </body>
 </html>
