--- a/cinesend-pricing.html
+++ b/cinesend-pricing.html
@@ -223,15 +223,21 @@
       <div class="pricing-grid">
         <div class="card">
           <div class="plan-name">Starter</div>
-          <div class="price">$299 <span>/ month</span></div>
+          <div class="price">$997 <span>/ month</span></div>
           <div class="plan-desc">Launch secure OTT quickly.</div>
           <a href="#" class="btn-primary">Get started</a>
+          <ul class="features">
+  <li><span class="check">✓</span> Secure watermark-protected screeners</li>
+  <li><span class="check">✓</span> Limited storage</li>
+  <li><span class="check">✓</span> Basic sharing controls</li>
+          </ul>
         </div>
+        
 
         <div class="card recommended">
           <div class="badge">Most popular</div>
           <div class="plan-name">Pro</div>
-          <div class="price">$699 <span>/ month</span></div>
+          <div class="price">$2497 <span>/ month</span></div>
           <div class="plan-desc">Advanced security and analytics.</div>
           <a href="#" class="btn-primary">Get started</a>
         </div>
