--- a/cinesend-pricing.html
+++ b/cinesend-pricing.html
@@ -1,63 +1,408 @@
-<section class="section">
-  <div class="section-inner">
-    <div class="section-header">
-      <h2>OTT Pricing</h2>
-      <p>
-        Secure, branded OTT experiences for media & entertainment, awards programs,
-        and large-scale distribution.
-      </p>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CineSend Pricing</title>
 
-    <div class="pricing-grid">
-      <!-- OTT STARTER -->
-      <div class="card">
-        <div class="plan-name">Starter</div>
-        <div class="price">$997 <span>/ month</span></div>
-        <div class="plan-desc">Launch secure OTT quickly for small teams.</div>
+  <style>
+    :root {
+      --blue: #205af7;
+      --light-blue: #eaf1ff;
+      --bg: #f6f7fb;
+      --text: #0b0f19;
+      --muted: #6b7280;
+      --card: #ffffff;
+      --border: #e5e7eb;
+    }
 
-        <ul class="features">
-          <li><span class="check">✓</span> Secure watermark-protected playback</li>
-          <li><span class="check">✓</span> Limited library size</li>
-          <li><span class="check">✓</span> Basic user access controls</li>
-        </ul>
+    * { box-sizing: border-box; }
 
-        <a href="#" class="btn-primary">Get started</a>
-      </div>
+    body {
+      margin: 0;
+      font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: var(--bg);
+      color: var(--text);
+    }
 
-      <!-- OTT PRO -->
-      <div class="card recommended">
-        <div class="badge">Most popular</div>
-        <div class="plan-name">Pro</div>
-        <div class="price">$1,299 <span>/ month</span></div>
-        <div class="plan-desc">Advanced OTT delivery with analytics and scale.</div>
+    /* ---------- NAV ---------- */
+    .nav {
+      background: var(--light-blue);
+      padding: 20px 32px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-        <ul class="features">
-          <li><span class="check">✓</span> Unlimited secure screeners</li>
-          <li><span class="check">✓</span> Viewer analytics & engagement data</li>
-          <li><span class="check">✓</span> Advanced permissions & roles</li>
-          <li><span class="check">✓</span> Branded OTT experience</li>
-        </ul>
+    .nav-logo {
+      font-size: 20px;
+      font-weight: 800;
+    }
 
-        <a href="#" class="btn-primary">Get started</a>
-      </div>
+    .nav-links {
+      display: flex;
+      gap: 28px;
+      align-items: center;
+      font-size: 15px;
+    }
 
-      <!-- OTT ENTERPRISE -->
-      <div class="card">
-        <div class="plan-name">Enterprise</div>
-        <div class="price">Custom</div>
-        <div class="plan-desc">
-          Designed for complex OTT use cases with custom security, scale,
-          and integrations.
-        </div>
+    .nav-links a {
+      text-decoration: none;
+      color: var(--text);
+      font-weight: 500;
+    }
 
-        <ul class="features">
-          <li><span class="check">✓</span> Ideal for airlines, awards & global studios</li>
-          <li><span class="check">✓</span> Custom security & compliance requirements</li>
-          <li><span class="check">✓</span> Dedicated onboarding & support</li>
-        </ul>
+    .nav-cta {
+      border: 2px solid var(--blue);
+      padding: 10px 18px;
+      border-radius: 10px;
+      color: var(--blue);
+      font-weight: 700;
+    }
 
-        <a href="#" class="btn-outline">Contact sales</a>
-      </div>
+    /* ---------- HERO ---------- */
+    .hero {
+      background: var(--light-blue);
+      padding: 120px 24px 96px;
+    }
+
+    .hero-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+    }
+
+    .hero h1 {
+      font-size: 64px;
+      line-height: 1.05;
+      margin-bottom: 24px;
+      letter-spacing: -0.02em;
+    }
+
+    .hero h1 span {
+      color: var(--blue);
+    }
+
+    .hero p {
+      font-size: 20px;
+      max-width: 720px;
+      color: var(--muted);
+    }
+
+    /* ---------- SECTIONS ---------- */
+    .section {
+      padding: 96px 24px;
+    }
+
+    .section-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+    }
+
+    .section-header {
+      margin-bottom: 48px;
+    }
+
+    .section-header h2 {
+      font-size: 40px;
+      margin-bottom: 12px;
+    }
+
+    .section-header p {
+      font-size: 18px;
+      color: var(--muted);
+      max-width: 720px;
+    }
+
+    /* ---------- PRICING GRID ---------- */
+    .pricing-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 32px;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: 20px;
+      padding: 40px 32px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
+      border: 2px solid transparent;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .card.recommended {
+      border-color: var(--blue);
+    }
+
+    .badge {
+      align-self: flex-start;
+      background: rgba(32,90,247,0.12);
+      color: var(--blue);
+      font-size: 13px;
+      font-weight: 600;
+      padding: 6px 12px;
+      border-radius: 999px;
+      margin-bottom: 16px;
+    }
+
+    .plan-name {
+      font-size: 24px;
+      font-weight: 700;
+      margin-bottom: 8px;
+    }
+
+    .price {
+      font-size: 42px;
+      font-weight: 800;
+      margin-bottom: 6px;
+    }
+
+    .price span {
+      font-size: 16px;
+      font-weight: 500;
+      color: var(--muted);
+    }
+
+    .plan-desc {
+      font-size: 15px;
+      color: var(--muted);
+      margin-bottom: 20px;
+    }
+
+    /* ---------- FEATURES ---------- */
+    ul.features {
+      list-style: none;
+      padding: 0;
+      margin: 0 0 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    ul.features li {
+      display: flex;
+      gap: 10px;
+      font-size: 14px;
+      line-height: 1.4;
+    }
+
+    .check {
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      background: rgba(32,90,247,0.15);
+      color: var(--blue);
+      font-size: 12px;
+      font-weight: 700;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+      margin-top: 2px;
+    }
+
+    /* ---------- BUTTONS ---------- */
+    .btn-primary {
+      background: var(--blue);
+      color: #fff;
+      border-radius: 12px;
+      padding: 16px;
+      font-size: 16px;
+      font-weight: 700;
+      text-align: center;
+      text-decoration: none;
+      margin-top: auto;
+    }
+
+    .btn-outline {
+      background: #111827;
+      color: #fff;
+      border-radius: 12px;
+      padding: 16px;
+      font-size: 16px;
+      font-weight: 700;
+      text-align: center;
+      text-decoration: none;
+      margin-top: auto;
+    }
+
+    hr {
+      border: none;
+      border-top: 1px solid var(--border);
+    }
+
+    @media (max-width: 900px) {
+      .pricing-grid {
+        grid-template-columns: 1fr;
+      }
+
+      .hero h1 {
+        font-size: 44px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- NAV -->
+  <div class="nav">
+    <div class="nav-logo">CineSend</div>
+    <div class="nav-links">
+      <a href="#">Products</a>
+      <a href="#">Solutions</a>
+      <a href="#">Resources</a>
+      <a href="#">Pricing</a>
+      <a href="#" class="nav-cta">Book a demo</a>
     </div>
   </div>
-</section>
+
+  <!-- HERO -->
+  <section class="hero">
+    <div class="hero-inner">
+      <h1>
+        Pricing to meet your <br />
+        <span>business needs</span>
+      </h1>
+      <p>
+        The ultimate toolkit to secure screeners, buying, and video-on-demand streaming.
+      </p>
+    </div>
+  </section>
+
+  <!-- OTT PRICING -->
+  <section class="section">
+    <div class="section-inner">
+      <div class="section-header">
+        <h2>OTT Pricing</h2>
+        <p>
+          Secure, branded OTT experiences for media & entertainment,
+          awards programs, and large-scale distribution.
+        </p>
+      </div>
+
+      <div class="pricing-grid">
+        <div class="card">
+          <div class="plan-name">Starter</div>
+          <div class="price">$997 <span>/ month</span></div>
+          <div class="plan-desc">Launch secure OTT quickly for small teams.</div>
+
+          <ul class="features">
+            <li><span class="check">✓</span> Secure watermark-protected playback</li>
+            <li><span class="check">✓</span> Limited library size</li>
+            <li><span class="check">✓</span> Basic access controls</li>
+          </ul>
+
+          <a href="#" class="btn-primary">Get started</a>
+        </div>
+
+        <div class="card recommended">
+          <div class="badge">Most popular</div>
+          <div class="plan-name">Pro</div>
+          <div class="price">$1,299 <span>/ month</span></div>
+          <div class="plan-desc">Advanced OTT delivery with analytics and scale.</div>
+
+          <ul class="features">
+            <li><span class="check">✓</span> Unlimited secure screeners</li>
+            <li><span class="check">✓</span> Viewer analytics</li>
+            <li><span class="check">✓</span> Advanced permissions</li>
+            <li><span class="check">✓</span> Branded OTT experience</li>
+          </ul>
+
+          <a href="#" class="btn-primary">Get started</a>
+        </div>
+
+        <div class="card">
+          <div class="plan-name">Enterprise</div>
+          <div class="price">Custom</div>
+          <div class="plan-desc">
+            Designed for airlines, awards, and complex OTT deployments.
+          </div>
+
+          <ul class="features">
+            <li><span class="check">✓</span> Custom security & compliance</li>
+            <li><span class="check">✓</span> Large-scale distribution</li>
+            <li><span class="check">✓</span> Dedicated support</li>
+          </ul>
+
+          <a href="#" class="btn-outline">Contact sales</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- DIVIDER -->
+  <section class="section" style="padding-top:0;">
+    <div class="section-inner">
+      <hr />
+    </div>
+  </section>
+
+  <!-- FILES & SCREENERS -->
+  <section class="section">
+    <div class="section-inner">
+      <div class="section-header">
+        <h2>Files & Screeners</h2>
+        <p>
+          Secure file delivery and screener workflows for studios,
+          festivals, internal teams, and distributors.
+        </p>
+      </div>
+
+      <div class="pricing-grid">
+        <div class="card">
+          <div class="plan-name">Screeners</div>
+          <div class="price">$497 <span>/ month</span></div>
+          <div class="plan-desc">Secure screener delivery with free trial.</div>
+
+          <ul class="features">
+            <li><span class="check">✓</span> Watermark-protected playback</li>
+            <li><span class="check">✓</span> Expiring links & passwords</li>
+            <li><span class="check">✓</span> Viewer tracking</li>
+          </ul>
+
+          <a href="#" class="btn-primary">Start free trial</a>
+        </div>
+
+        <div class="card">
+          <div class="plan-name">Files</div>
+          <div class="price">$497 <span>/ month</span></div>
+          <div class="plan-desc">Secure file delivery and storage.</div>
+
+          <ul class="features">
+            <li><span class="check">✓</span> Secure uploads & downloads</li>
+            <li><span class="check">✓</span> Permissions & access control</li>
+            <li><span class="check">✓</span> Review workflows</li>
+          </ul>
+
+          <a href="#" class="btn-primary">Start free trial</a>
+        </div>
+
+        <div class="card recommended">
+          <div class="badge">Best value</div>
+          <div class="plan-name">Screeners + Files</div>
+          <div class="price">$897 <span>/ month</span></div>
+          <div class="plan-desc">Bundled access — save 10%.</div>
+
+          <ul class="features">
+            <li><span class="check">✓</span> All Screeners features</li>
+            <li><span class="check">✓</span> All Files features</li>
+            <li><span class="check">✓</span> Unified workflows</li>
+          </ul>
+
+          <a href="#" class="btn-primary">Start free trial</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FINAL CTA -->
+  <section class="section" style="background: var(--light-blue);">
+    <div class="section-inner" style="text-align:center;">
+      <a href="#" class="btn-outline" style="margin-right:16px;">Book a demo</a>
+      <a href="#" class="btn-primary">Start free trial</a>
+    </div>
+  </section>
+
+</body>
+</html>
