--- a/cinesend-pricing.html
+++ b/cinesend-pricing.html
@@ -339,7 +339,7 @@
   </section>
 
   <!-- FILES & SCREENERS -->
-  <section class="section">
+<section class="section section-tight">
     <div class="section-inner">
       <div class="section-header">
         <h2>Files & Screeners</h2>
