--- a/cinesend-pricing.html
+++ b/cinesend-pricing.html
@@ -15,7 +15,10 @@
       --card: #ffffff;
       --border: #e5e7eb;
     }
-
+    .section-tight {
+  padding-top: 48px;
+}
+li
     * { box-sizing: border-box; }
 
     body {
